2010-02-08  Jay Foster <jay@systech.com>

	* tests/pselect.c: Corrected return value of pthread_kill()
	to match POSIX standard.

2008-11-18  Rutger Hofman <rutger@cs.vu.nl>

	* src/file.cxx: add a chmod() call, implemented by calling
	cyg_fs_setinfo with parameter FS_INFO_CHMOD

2008-12-11  Nick Garnett  <nickg@ecoscentric.com>

	* src/fd.cxx (fp_ucount_dec, fd_close): Fix locking strategy so
	that the fdlock is free when filesystem close entry is
	called. This allows other threads to peform descriptor operations
	during the close.

2008-04-02 Xinghua Yang <yxinghua@sunnorth.com.cn>
	   Andrew Lunn <andrew.lunn@ascom.ch>

	* cdl/fileio.cdl: Use CYGPKG_FILEIO_DIRENT_DTYPE to enable/disable
	d_type field of struct dirent.
	* include/dirent.h: Add a d_type field to struct dirent, in order to
	distinguish file type directly without calling stat.
	* doc/fileio.sgml: Documentation about this new member and the fact
	it is not portable.

2007-08-17 Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

	tests/fnmatch.c (main): Fix cut/paste error in final pass/fail
	report.
	
2007-06-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/misc.cxx (cyg_mtab_extra): Only create the array if it has more
	than 0 entries.

2007-01-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fnmatch.c: Test case for fnmatch.

2007-01-24  Peter Korsgaard  <peter.korsgaard@barco.com>

	* cdl/fileio.cdl:
	* src/fnmatch.c:
	* include/fnmatch.h: Added fnmatch() implementation (from NetBSD).

2006-05-18  Paul Fine  <pfine@dtccom.com>

	* include/fileio.h : Added a key and a structure to extract the
	disk size and the available free space for a filesystem using
	the cyg_fs_getinfo() interface.

2006-05-17  Andy Jackson <andy@grapevinetech.co.uk>
	
	* tests/fileio1.c: Compiler warning fixes.
	* tests/testfs.c:  Compiler warning fixes.

2006-02-16  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/misc.cxx (cyg_mtab_lookup): Corrected implementation for
	relative paths crossing mount points.